PartnerDemo/src/objects/Category_and_Brand_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Brands__c</fullName>
        <label>More Brands</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Category and Brand Mapping</label>
</CustomObject>